# forge-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  MIGRATION_PLAN.md  README.md  THIRD-PARTY.md  alembic.ini  pyproject.toml
.githooks/: pre-commit
.planning/: ASSET-SUBSTRATE-AUDIT.md  AUTHOR-STILL-VIDEO-LOOP-FRAMING.md  BRIEF-24-CONSUME-GENERATION-FACTS.md  COLD-START-INVESTIGATION.md  CONTINUITY-MAP.md  CONVERGENCE-102-chain-corpus-forks.md  CONVERGENCE-153-value-kwarg-binding.md  CONVERGENCE-foreach-cutover.md  CONVERGENCE-foreach-index.md  CONVERGENCE-generation-dispatch-entry.md  CONVERGENCE-generation-grant.md  CONVERGENCE-port-intent.md  CONVERGENCE-resolution-front.md  CONVERSATIONAL-RECOVERY-BRIEF.md  CR2-PARAM-BINDING-FOLLOWUP.md  CR2-T4-REENTRY-FOLLOWUP.md  CYCLE-1-PASS-TO-CODE.md  EDGE-TRAVERSAL-READERS-PROPOSAL.md  GAP-VERSION-OWNERSHIP-LINKAGE.md  GENERATION-TRUST-MODEL-FRAMING-SEED.md  GRAPH-NATIVE-COMPOSITION-CONVERGENCE.md  HANDOFF-2026-06-07-CYCLE-1-AND-PIPELINE.md  ISSUES-24-DEFERRED.md  JOURNAL.md  LIVE-GENERATION-JOIN-RUNGS.md  M1-WIRE-AND-RUN-SEAM-DESIGN.md  M2-CHAIN-CORPUS-CAPTURE-FRAMING.md  M2-CHAIN-CORPUS-CAPTURE-PASS-TO-CODE.md  M2-CHAIN-CORPUS-CAPTURE-SEED.md  M2-PARITY-AND-CUTOVER-FRAMING.md  M2-SLICE-1-FIXBACK-2.md  M2-SLICE-1-FIXBACK.md  M2-SLICE-1-PASS-TO-CODE.md  M2-SLICE-1-SEAM-DESIGN.md  M2-SLICE-2-SEAM-DESIGN.md  M2-SLICE-2A-PASS-TO-CODE.md  M2-SLICE-2B-FIXBACK.md  M2-SLICE-2B-PASS-TO-CODE.md  M2-SLICE-2C-PASS-TO-CODE.md  M2-SLICE-3-FRAMING-SEED.md  (+48 more)
.planning/adr/: ADR-0001-chat-mutation-executor-delegation.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/memos/: MEMO-bridge-reply-v1-plan.md  MEMO-flow-conformance-review.md  MEMO-perception-land-dispatch.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.10-AUTHORITY-INVARIANCE-FRAMING.md  v1.10-DISCUSS.md  v1.10-DISPATCH-INTEGRITY-FRAMING.md  v1.10-MILESTONE-CLOSE.md  v1.11-DISCUSS.md  v1.11-REFERENTIAL-GROUNDING-FRAMING.md  v1.11-SOURCE-ROUTING-FRAMING.md  v1.12-MILESTONE-CLOSE.md  v1.2-REQUIREMENTS.md  (+50 more)
UAT/: CR.1-dogfood-findings.md
docs/: API.md  ARCHITECTURE.md  ASSET.md  AUTHORING.md  CHAT.md  DATA_MODEL.md  DIRECT_EXECUTION.md  ENDPOINTS.md  FLAME_API.md  GETTING-STARTED.md  INSTALL.md  RATIFICATION.md  RECIPES.md  TOOL_AUTHORING.md  TROUBLESHOOTING.md  UAT-A3.md  VOCABULARY.md  forge-bridge-findings-2026-05-31.md
forge_bridge/: __init__.py  __main__.py  _sanitize_patterns.py  bridge.py  config.py  install_provenance.py  llm_router.py  server.py  shell.py
packaging/: forge-bridge.env.example
scratchpad/: fb_extract_code.py  issue116_comment.md  pipeline_50_reshape_ask.md  pipeline_segment_id_issue.md  slice3_smoke_readonly.py  slice3_uat_preview.py  temporal_vertical_uat_SKELETON.py
scripts/: drive_conversational_front.py  drive_greenscreen_roto_chain.py  install-bootstrap.sh  install-flame-hook.sh  install-git-hooks.sh  live_flame_editorial_rename_vertical_uat.py  live_flame_editorial_trim_vertical_uat.py
tests/: _log_capture.py  conftest.py  smoke_helpers.py  test_a5_2_forge_list_staged_regression.py  test_a5_3_1_narrowing_semantic_mismatch_regression.py  test_async_client_correlation.py  test_author_driver.py  test_authoring_targets.py  test_bootstrap_unification.py  test_canonical_flame_query.py  test_cli_author.py  test_cli_chat.py  test_cli_client.py  test_cli_commands.py  test_cli_doctor.py  test_cli_execs.py  test_cli_flame_exec.py  test_cli_graph.py  test_cli_health.py  test_cli_json_mode.py  test_cli_main.py  test_cli_manifest.py  test_cli_rendering.py  test_cli_run.py  test_cli_runtime.py  test_cli_runtime_doctor.py  test_cli_tools.py  test_config.py  test_consent_grant.py  test_console_health.py  test_console_http_transport.py  test_console_instance_identity.py  test_console_mcp_resources.py  test_console_port_degradation.py  test_console_read_api.py  test_console_routes.py  test_console_stdio_cleanliness.py  test_console_ui_routes_registered.py  test_content_addressed_repo.py  test_contract_vocabulary_alignment.py  (+90 more)
(+1150 files in other folders)
