[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-bridge"
version = "0.1.0"
description = "Protocol-agnostic communication middleware for post-production pipelines"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "mcp[cli]>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.scripts]
forge-bridge = "forge_bridge.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["forge_bridge"]

[tool.ruff]
line-length = 100
target-version = "py310"
