[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-bridge"
version = "1.3.0"
description = "Protocol-agnostic communication middleware for post-production pipelines"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "mcp[cli]>=1.19,<2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "jinja2>=3.1",
    "rich>=13.9.4",
    "starlette<0.53",
]

[project.scripts]
forge-bridge = "forge_bridge.__main__:app"

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.97,<1",
    "ollama>=0.6.1,<1",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout>=2.2.0",
    "ruff",
]
test-e2e = [
    "pytest-playwright>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["forge_bridge"]
include = [
    "forge_bridge/console/static/**/*",
    "forge_bridge/console/templates/**/*",
]

[tool.hatch.build]
include = ["forge_bridge/**"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["T20"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
# Phase 11: add "forge_bridge/cli/**" carve-out when CLI subcommands ship.
# Pre-Phase-5 orphaned modules — broken imports (references nonexistent `forge_mcp`
# module), not re-exported in forge_bridge/__init__.py, not runtime-imported anywhere.
# Carved out so the T20 gate can be live for new code (especially forge_bridge/console/)
# without requiring a pre-emptive dead-code deletion inside Plan 09-01. Track cleanup
# as a follow-up refactor.
"forge_bridge/server.py" = ["T20"]
"forge_bridge/shell.py" = ["T20"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Put the repo root on sys.path so tests exercise the local source tree, not a
# site-packages shadow (e.g., a stale `pip install forge-bridge` pulling in an
# older release). Replaces a sys.path.insert() hack previously in tests/conftest.py.
pythonpath = ["."]
